# sc-qmt

./: .gitignore  Figures.ipynb  README.md  functions.py  pyproject.toml  sc-qmt.yaml  sc_qmt.py  script_SDPexperiment.py  script_comparison.py  script_manyDeltas.py  script_seesaw.py  script_seesaw_CV.py  script_shotNoise.py
data_folder/: SDP_cluster-seesaw4.msgpack  SDP_cluster-seesaw6.msgpack  SDP_cluster-seesawPauli.msgpack  SDP_cluster.msgpack  SDP_clusterSDP4.msgpack  SDP_clusterSDP6.msgpack  SDP_randomPOVM.msgpack  SDP_seesaw_randomPOVM.msgpack  SDP_seesaw_randomPOVM_bis.msgpack  SDP_seesaw_randomPOVM_tris.msgpack  dim_10k.msgpack  dim_10k_overC.msgpack  dim_500k.msgpack  dim_500k_overC.msgpack  manyDeltas.msgpack  seesaw_CV_4rand.msgpack  seesaw_CV_6rand.msgpack  seesaw_CV_pauli.msgpack  seesaw_CV_randomPOVM.msgpack  shotNoise_histogram.msgpack
