[tool.poetry]
name = "sc-qmt"
version = "0.1.0"
description = ""
authors = ["Marco Cattaneo <marco.cattaneo@algorithmiq.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.3"
notebook = "^6.4.12"
cvxpy = "^1.2.1"
cvxopt = "^1.3.0"
Mosek = "^10.0.26"
qutip = "^4.7.0"
matplotlib = "^3.6.2"
msgpack-numpy = "^0.4.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "^22"
isort = "^5"

[tool.poetry.group.test.dependencies]
pytest = "^7"

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"
filter_files = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"